# binary_ninja_mcp

./: .gitignore  README.md  __init__.py  plugin.json  pyproject.toml
bridge/: binja_mcp_bridge.py  requirements.txt
plugin/: __init__.py
plugin/api/: endpoints.py
plugin/core/: binary_operations.py  config.py
plugin/server/: http_server.py
plugins/binary_ninja_mcp/core/: binary_operations.py
plugins/binary_ninja_mcp/utils/: string_utils.py
scripts/: setup_claude_desktop.py
