[project]
name = "binary_ninja_mcp"
version = "0.1.0"
description = "Provides a MCP (Model Context Protocol) server, bridge, and Binary Ninja plugin for LLM integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "mcp[cli]>=1.6.0",
    "requests>=2.32.3",
]
